2018-02-13 Fixed problem with resolving url in inline css
2018-02-12 Fixed Catch addon double click behaviour on mobile devices, paddle is always appearing and can't run past right edge of screen. Also simulation is paused on show answers and checks answers, and it calculates max score.
2018-02-12 Deselecting Double State Button on the end of Multiaudio track connected via Audio Binder.
2018-02-09 Fixed dragging out elements from Draggable Gap.
2018-02-09 Fixed speak and playTitle commands in TTS addon
2018-02-07 Added attribute role in TrueFalse for screen reader apps.
2018-02-06 Fixed issues with scaling in Drawing
2018-02-01 Fixed issue with saving empty inlineStyles or classStyles.
2018-01-30 Added alt text for images added by RichTextEditor and for Memogame.
2018-01-30 Fixed Double State Button not activating on keyboard input.
2018-01-29 Fixed Image gap and multiplegap not getting image source alt text
2018-01-26 Fixed addon TrueFalse now only adds text as checkbox alt text
2018-01-24 Fixed addon TrueFalse not being read correctly by NVDA 
2018-01-23 Fixed url resolving for modules
2018-01-23 Fixed Choice chosen element not reseting
2018-01-23 Fixed tests in TTS and Text Identification
2018-01-23 Added tabindex in Image Identification, Image Source and Text Identification
2018-01-23 Added TTS functionality
2018-01-19 Puzzle addon allows drag'n'dropping elements; fixed showing correctness marks for many puzzle addons at once; now it sends valueChanged event
2018-01-18 Added item handling of MultiAudio in Multiple Audio Controler Binder
2018-01-18 Fixed events in LearnPen Data module
2018-01-17 Fixed player start with subset of pages from exported lesson.
2018-01-17 Fixed reading data in LearnPen Report module
2018-01-15 Added time labels property for video addon.
2018-01-10 Fixed problem with saving and restoring modules xml.
2018-01-10 Fixed deselects the selected widget when showing errors, correct answer, or resetting